src/index.css
body {
  margin: 0;
  background-color: #e0e0d5;
}

h1 {
  font-family: 'Poltawski Nowy', serif;
  font-weight: 400;
  font-size: 48px;
  color: #264653;
  line-height: 0;
  
}
.count-down-circle-timer-text h3 {
  font-family: 'Poltawski Nowy', serif;
  font-weight: 400;
  font-size: 32px;
  color: #f0f0ea;
  line-height: 0px;
  margin-bottom: 4px;
  letter-spacing: .1rem;
}

.count-down-circle-timer-text p {
  font-family: 'Sora', sans-serif;
  font-weight: 100;
  color: #f0f0ea;
}

p {
  font-family: 'Sora', sans-serif;
  font-weight: 300;
  font-size: 16px;
  
}

button {
  font-family: 'Sora', sans-serif;
  font-weight: 300;
  color: #f0f0ea;
  font-size: 0.8rem;
  padding: 0.5rem 1.2rem;
  border: none;
  border-radius: 3rem;
  margin-top: 0.2rem;
  margin-bottom: 0.2rem;
  background: #264653;
  min-width: 80px;
  letter-spacing: .035rem;
}
.goal-item-buttons button {
  font-family: 'Sora', sans-serif;
  font-weight: 400;
  color: #264653;
  font-size: 0.8rem;
  padding: 0.5rem 1.2rem;
  border: none;
  border-radius: 3rem;
  margin-top: 0.2rem;
  margin-bottom: 0.2rem;
  background: #C7C7BD;
  min-width: 80px;
  
}

.start-setting-button {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
}
.start-stop-button {
  margin-top: 5px;
}
.hidenshow-setting-button {
  margin-bottom: 20px;
}
.count-down-circle-timer-text {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
}
.footer {
    width: 100vw;
    background-color: #264653;
    height: 42px;
}

.settings-info {
  width: 100vw;
  background-color: #264653;
  justify-content: space-around;
  align-items: flex-start;
  padding: 0em .25em;
  display: flex;
  color: #f0f0ea;
  letter-spacing: .035rem;
}

.settings-info p {
  font-size: 12px;
  margin-left: 5px;
  margin-right: 5px;
}
.settings {
  border: 2px dotted #264653;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
  text-align: left;
  width: 30vw;
  padding: 20px;
  margin-bottom: 20px;
  
}
.settings input{
  border: 2px dotted #264653;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;  
  height: 20px;
  background-color: #f0f0ea;
  font-family: 'Sora', sans-serif;
  font-weight: 300;
  text-align: left;

}
.time-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 15rem;
  width: 15rem;
  border-radius: 7.5rem;
  color: #efefef;
  background: #264653;
  font-size: 3.5rem;
  box-shadow: 1rem 1.5rem 2rem rgba(27, 50, 59, .7);
}



.pomodoro {
  padding-top: 8vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: radial-gradient(circle, #e0e0d5 0%, #f0f0ea 65%);
  padding-bottom: 8vw;
}

.pomodoro h1+p{
    width: 50vw;
    text-align: center;
    margin-bottom: 20px;
    margin-top: 5px;
    
    
}

label {
  font-family: 'Sora', sans-serif;
  font-weight: 300;
  color: #545454;
  margin-bottom: 10px;
}

.goal-input {
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
  width: 30vw;
  padding: 20px;
  border-style: dotted;
  border-color: #264653;
  margin-bottom: 10px;
}

textarea {
  width: 100%;
  padding: 12px 8px;
  box-sizing: border-box;
  background-color: #f0f0ea;
  font-size: 16px;
  resize: none;
  font-family: 'Sora', sans-serif;
  font-weight: 300;
  color: #545454;
  margin-bottom: 10px;
  border: 2px dotted #264653;

      
}
.goal-item {
  font-family: 'Sora', sans-serif;
  font-weight: 300;
  color: #545454;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
  width: 30vw;
  background-color: #f0f0ea;
  padding: 20px;
  border-style: dotted;
  border-color: #264653;
  margin-bottom: 20px;
  margin-top: 10px;  
}
.goal-item-buttons {
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-end;
  display: flex;
}
.goal-item-buttons button {
  margin-top: 20px;
  margin-right: 0.2rem;
}
span {
display: block;
  width: 100%;
  word-wrap: break-word;
}
.goal-date-holder {
  width: 100%;
  text-align: left;
    font-family: 'Sora', sans-serif;
      font-weight: 100;
      color: #97978f;
      font-size: 14px;
      margin-bottom: 10px;

}

.flash-message {
  font-family: 'Poltawski Nowy', serif;
    font-weight: 400;
    font-size: 16px;
    color: #264653;
    line-height: 2;
}

input[type=number] {
  -moz-appearance: textfield;
  appearance: textfield;
  margin: 0;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

@media screen and (max-width: 1050px) {

  .settings {
      width: 60vw;
    }
  .goal-input {
      width: 60vw;
    }
  
  .goal-item {
    width: 60vw;
  }
}

@media screen and (max-width: 767px) {
  .settings {
      width: 80vw;
    }
  .goal-input {
      width: 80vw;
    }
  .goal-item {
    width: 80vw;
  }
}

@media screen and (max-width: 479px) {
  .settings {
      width: 80vw;
    }
  .goal-input {
      width: 80vw;
    }
  .goal-item {
    width: 80vw;
      
  }
}

